# back_up

./: requirements.txt  user_calc_db — копия.ipynb
analyst_platform/: glossary.json  show_tables.ipynb
analyst_platform/src/: credentials.json  launch.py
analyst_platform/src/tools/: data_implemetation.py  er_create_test.ipynb  table_overview.py
mongo_connect/: mongo_connect.ipynb  mongo_connect.py  pyproject.toml
orders_distribution/: analyse.ipynb
orders_distribution/data/: operational.csv
orders_distribution/data/operational/: таблица_по_клиентам_заявкам.csv  таблица_по_работе_менеджеров.csv  таблица_по_состoянию_заявок.csv
orders_distribution/data/process/: ВИТРИНА_РАСПРЕДЕЛЕНИЯ_ЗАЯВОК.xlsx  таблица_по_клиентам_заявкам.csv  таблица_по_работе_менеджеров.csv  таблица_по_состoянию_заявок.csv  таблица_результатов_заявок.csv
profonation_report/: main.ipynb
