[tool.poetry]
name = "mongo-connect"
version = "0.1.0"
description = ""
authors = ["nicklisits <ln@modul.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.12.0"  # Make sure this version or higher is compatible with wire version 6



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
